Финальная доработка layout's приложения

--- a/app/src/main/res/layout-land/activity_register.xml
+++ b/app/src/main/res/layout-land/activity_register.xml
@@ -46,7 +46,7 @@
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
-        android:backgroundTint="?attr/colorButtonNormal"
+        android:backgroundTint="@color/blue"
         android:id="@+id/btnRegister"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
