--- a/app/src/main/res/layout/dialog_team_leaders.xml
+++ b/app/src/main/res/layout/dialog_team_leaders.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Таблица лидеров команд"
