--- a/app/src/main/res/layout/item_invite.xml
+++ b/app/src/main/res/layout/item_invite.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tvInviteTeam"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Команда: "
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/tvInviteCaptain"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Капитан: "
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/tvInviteStatus"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Статус: "
