--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -38,7 +38,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
-        android:backgroundTint="?attr/colorButtonNormal"
+        android:backgroundTint="@color/blue"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -49,7 +49,7 @@
 
     <Button
         android:id="@+id/btnGoToRegister"
-        android:backgroundTint="?attr/colorButtonNormal"
+        android:backgroundTint="@color/blue"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
