--- a/app/src/main/res/layout/activity_create_riddles.xml
+++ b/app/src/main/res/layout/activity_create_riddles.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.main.CreateRiddlesActivity">
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:id="@+id/tvRiddlesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
