--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -17,13 +17,14 @@
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/leaderboardTextColor"
             android:layout_marginBottom="16dp"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/white"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp">
 
@@ -187,6 +188,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/white"
             app:cardCornerRadius="8dp"
             app:cardElevation="4dp">
 
@@ -220,7 +222,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Записаться на мероприятие"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:padding="12dp"
             android:textColor="@android:color/white"/>
 
@@ -230,8 +232,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Список команд с баллами"
+            android:textSize="18sp"
             android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="12dp"
+            android:textColor="@android:color/white"/>
 
         <ListView
             android:id="@+id/listViewRegisteredTeams"
