--- a/app/src/main/res/layout/activity_event_preview.xml
+++ b/app/src/main/res/layout/activity_event_preview.xml
@@ -14,7 +14,7 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/leaderboardTextColor"
             android:layout_height="wrap_content"
             android:text="Предпросмотр мероприятия"
             android:textSize="24sp"
@@ -23,7 +23,7 @@
             android:layout_marginBottom="16dp"/>
 
         <TextView
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/leaderboardTextColor"
             android:id="@+id/tvEventName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
             android:layout_marginBottom="8dp"/>
 
         <TextView
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/leaderboardTextColor"
             android:id="@+id/tvEventDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,10 +43,11 @@
             android:id="@+id/tvEventStartPlace"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="?attr/leaderboardTextColor"
             android:textSize="16sp" />
 
         <TextView
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/leaderboardTextColor"
             android:id="@+id/tvEventDateTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,7 +55,7 @@
             android:layout_marginBottom="8dp"/>
 
         <TextView
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/leaderboardTextColor"
             android:id="@+id/tvMaxParticipants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,7 +63,7 @@
             android:layout_marginBottom="16dp"/>
 
         <TextView
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/leaderboardTextColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Загадки:"
