--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,11 +7,12 @@
     android:padding="16dp">
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="19sp"
+        android:textStyle="bold"
         android:layout_marginTop="170dp"
         android:text="Вход в приложение" />
 
@@ -22,6 +23,7 @@
         android:hint="Email"
         android:backgroundTint="@color/white"
         android:textColorHint="@color/gray"
+        android:textColor="@color/white"
         android:layout_marginTop="10dp"
         android:inputType="textEmailAddress"/>
 
@@ -32,12 +34,13 @@
         android:layout_marginTop="5dp"
         android:backgroundTint="@color/white"
         android:textColorHint="@color/gray"
+        android:textColor="@color/white"
         android:hint="Пароль"
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
-        android:backgroundTint="?attr/colorButtonNormal"
+        android:backgroundTint="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="Войти"
@@ -47,7 +50,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnGoToRegister"
-        android:backgroundTint="?attr/colorButtonNormal"
+        android:backgroundTint="@color/blue"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="bottom"
