--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="Регистрация"
+        android:textStyle="bold"
         android:textColor="@color/white"
         android:layout_marginTop="170dp"
         android:textSize="20sp"/>
@@ -22,34 +23,37 @@
         android:hint="Имя пользователя"
         android:backgroundTint="@color/white"
         android:textColorHint="@color/gray"
+        android:textColor="@color/white"
         android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
         android:backgroundTint="@color/white"
-        android:textColorHint="@color/gray"
-        android:inputType="textEmailAddress"/>
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/white"
+        android:textColorHint="@color/gray" />
 
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Пароль"
-        android:backgroundTint="@color/white"
         android:textColorHint="@color/gray"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
-        android:backgroundTint="?attr/colorButtonNormal"
+        android:backgroundTint="@color/blue"
         android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:text="Зарегистрироваться"
-        android:textAllCaps="true"
         android:textColor="@color/white"
+        android:textAllCaps="true"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_marginTop="8dp"/>
 
