--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Мои команды"
@@ -26,7 +26,7 @@
         android:textColor="@android:color/white"/>
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:id="@+id/tvMyTeams"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
         android:dividerHeight="1dp"/>
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:id="@+id/tvInvites"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
