--- a/app/src/main/res/layout/dialog_invite_users.xml
+++ b/app/src/main/res/layout/dialog_invite_users.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_height="wrap_content"
         android:text="Пригласить пользователя"
         android:textSize="18sp"
@@ -17,20 +17,23 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
 
         <com.google.android.material.textfield.TextInputEditText
             android:textColor="@color/leaderboard_text"
             android:id="@+id/etSearchUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
+            android:textColorHint="@color/black"
             android:hint="Поиск по логину"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:id="@+id/rvUsers"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -51,7 +54,7 @@
             android:layout_marginEnd="8dp" />
 
         <Button
-            android:textColor="@color/leaderboard_text"
+            android:textColor="?attr/colorButtonNormal"
             android:id="@+id/btnInvite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
