--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/bg_blur_rect">
 
     <TextView
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:id="@+id/tv_team_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -19,6 +19,6 @@
         android:id="@+id/tv_team_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#6200EE"
+        android:textColor="@color/teal_200"
         android:textStyle="bold"/>
 </LinearLayout>
