--- a/app/src/main/res/layout/item_team_leaderboard_row.xml
+++ b/app/src/main/res/layout/item_team_leaderboard_row.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/tvTeamPlace"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tvTeamName"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -28,7 +28,7 @@
 
     <TextView
         android:id="@+id/tvTeamScore"
-        android:textColor="@color/leaderboard_text"
+        android:textColor="?attr/leaderboardTextColor"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
         android:gravity="end"
